tests/errors/4_type_errors/sample10.ifj16.java
class Main {
    static String a;
    static void run() {
        int a = ifj16.sort("fads"); /// lvalue int
    }
}

